src/objects/Legal_Case__c.object
<CustomObject>
    <fields>
        <fullName>Active_Patent_Count__c</fullName>
        <label>Active Patent Count</label>
        <summaryFilterItems>
            <field>Patent__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Patent__c.Legal_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Enforcement_date__c</fullName>
        <label>Actual Enforcement date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CWV_Enforcement_date__c</fullName>
        <label>CWV Enforcement date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <label>Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customs_Status__c</fullName>
        <label>Customs Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defendent_s__c</fullName>
        <label>Defendent(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Date__c</fullName>
        <label>Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_House_Counsel__c</fullName>
        <label>In House Counsel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigator_names__c</fullName>
        <label>Litigator names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Counsel_Firm_Address__c</fullName>
        <formula>Local_Counsel__r.Local_Counsel_Firm_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Counsel Firm Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Counsel_Firm_Email_Address__c</fullName>
        <formula>Local_Counsel__r.Local_Counsel_Firm_email_address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Counsel Firm Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Counsel_Firm_FAX_Number__c</fullName>
        <formula>Local_Counsel__r.Local_Counsel_Firm_FAX_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Counsel Firm FAX Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Counsel_Firm_Main_Office_Phone_Num__c</fullName>
        <formula>Local_Counsel__r.Local_Counsel_Firm_Main_Office_Phone_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Counsel Firm Main Office Phone Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Counsel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Counsel</label>
        <referenceTo>Local_Counsel__c</referenceTo>
        <relationshipLabel>Legal Cases</relationshipLabel>
        <relationshipName>Legal_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plaintiff__c</fullName>
        <label>Plaintiff</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Motorola_Business_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Motorola Business Contact</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Legal Cases</relationshipLabel>
        <relationshipName>Legal_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Outside_Counsel_Names__c</fullName>
        <label>Primary OC Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_Case__c</fullName>
        <label>Status of Case</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Legal Case</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>